# fastapi_app

./: main.py  pyproject.toml
src/: __init__.py  config.py  database.py  main.py  models.py
