[tool.poetry]
name = "fastapi_app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standart"], version = "^0.115.2"}
uvicorn = {extras = ["standart"], version = "^0.31.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
